submission tab, applied by number alignment UI fixed

--- a/frontend/src/components/style.css
+++ b/frontend/src/components/style.css
@@ -1267,9 +1267,7 @@ div.css-18dcxwc {
 .aa_head p {
   width: 170px;
 }
-.aa_head div {
-  width: 100px;
-}
+
 .experience_container {
   position: relative;
 }
